--- a/index.html
+++ b/index.html
@@ -1,95 +1,100 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>SLHS-chat</title>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SLHS-chat</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
 
-    <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-    <div id="main">
-        <div id="sidebar">
-            <div id="side-top">原神</div>
-            <div id="chat-list"></div>
-            <div id="user-info"></div>
-        </div>
-        <div id="contents">
-            <div id="content-top"></div>
-            <div id="content-main">
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
-                <p>原神</p>
+    <body>
+        <div id="main">
+            <div id="sidebar">
+                <div id="side-top">
+                    <ul id="side-top-ul">
+                        <li id="side-top-no1">原神</li>
+                        <li id="side-top-no2">原神</li>
+                        <li id="side-top-no3">原神</li>
+                        <li id="side-top-no4">原神</li>
+                    </ul>
+                </div>
+                <div id="chat-list"></div>
+                <div id="user-info"></div>
             </div>
-            <div id="text-box">
-                <form action="">
-                    <textarea></textarea>
-                </form>
-                <button id="submit">发送</button>
+            <div id="contents">
+                <div id="content-top"></div>
+                <div id="content-main">
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                    <p>原神</p>
+                </div>
+                <div id="text-box">
+                    <form action="">
+                        <textarea placeholder="输入文字"></textarea>
+                    </form>
+                    <button id="submit">发送</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="node_modules/showdown/dist/showdown.min.js"></script>
-    <script src="node_modules/xss/dist/xss.min.js"></script>
-    <script src="chatpage.js"></script>
-</body>
-
+        <script src="node_modules/showdown/dist/showdown.min.js"></script>
+        <script src="node_modules/xss/dist/xss.min.js"></script>
+        <script src="mainrender.js"></script>
+    </body>
 </html>
