--- a/index.html
+++ b/index.html
@@ -25,70 +25,12 @@
             </div>
             <div id="contents">
                 <div id="content-top"></div>
-                <div id="content-main">
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                    <p>原神</p>
-                </div>
+                <div id="content-main"></div>
                 <div id="text-box">
                     <form action="">
+                        <input type="button" value="发送" id="submit">
                         <textarea placeholder="输入文字"></textarea>
                     </form>
-                    <button id="submit">发送</button>
                 </div>
             </div>
         </div>
