--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>SLHS-chat</title>
 
         <link rel="stylesheet" href="index.css" />
+        <link
+            rel="stylesheet"
+            href="./node_modules/github-markdown-css/github-markdown.css"
+        />
     </head>
 
     <body>
@@ -28,7 +32,7 @@
                 <div id="content-main"></div>
                 <div id="text-box">
                     <form action="">
-                        <input type="button" value="发送" id="submit">
+                        <input type="button" value="发送" id="submit" />
                         <textarea placeholder="输入文字"></textarea>
                     </form>
                 </div>
