显示群名+图标

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 <div id="user-info"></div>
             </div>
             <div id="contents">
-                <div id="content-top"></div>
+                <div id="content-top">
+                    <img src="." alt="" id="chat-icon" />
+                    <h3 id="chat-title">《原神》交流</h3>
+                </div>
                 <div id="content-main"></div>
                 <div id="text-box">
                     <form action="">
